--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,31 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(33, 32, 32);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App {
+  width: 100%;
+  align-items: center;
+  text-align: center;
+}
+
+.App-header {
+  margin-left: 35%;
+  width: 400px;
+  margin-top: 100px;
+  background-color: gray;
+  color:aliceblue;
+  padding: 30px;
+  border-radius: 35px;
+}
+
+.App-header img {
+  width: 400px;
+  border-radius: 50%;
 }
