--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,46 @@
 :root {
   --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --green: #86bd3d;
+  --whatsapp: #47c655;
+  --whatsapp_hover: #24792e;
 }
 
 html,
 body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  display: flex;
+  background-image: url("../images/background.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   max-width: 100vw;
-  overflow-x: hidden;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Montserrat", sans-serif;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+body::-webkit-scrollbar {
+  width: 10px;         
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+body::-webkit-scrollbar-track {
+  background: transparent;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+body::-webkit-scrollbar-thumb {
+  background-color: var(--green);
+  border-radius: 20px; 
+  border: 3px solid var(--background);
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Escurece a imagem (0.5 é a opacidade) */
 }
