--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,10 +11,10 @@ body {
   height: 100%;
   margin: 0;
   display: flex;
-  background-image: url("../images/background.jpg");
+  /* background-image: url("../images/background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center; */
   max-width: 100vw;
 }
 
@@ -36,11 +36,14 @@ body::-webkit-scrollbar-thumb {
   border: 3px solid var(--background);
 }
 
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* Escurece a imagem (0.5 é a opacidade) */
+.background_image {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+}
+
+@media screen and (max-width: 768px) {
+  .background_image {
+    height: 90vh;
+  }
 }
