--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,8 +1,13 @@
 .page {
   width: 100%;
-  height: 4000px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 47px;
+  margin-top: 75px;
+}
+
+@media screen and (max-width: 768px) {
+  .page {
+    margin-top: 50px;
+  }
 }
