--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,8 +38,11 @@ body::-webkit-scrollbar-thumb {
 
 .background_image {
   position: fixed;
-  width: 100vw;
-  height: 100vh;
+  top: 0;
+  left: 0;
+  /* width: 100%;
+  height: 50%; */
+  z-index: -1; /* Fica atrás do conteúdo */
 }
 
 @media screen and (max-width: 768px) {
