--- a/src/components/section/index.module.css
+++ b/src/components/section/index.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   gap: 30px;
-  height: 500px;
+  height: 40vh;
   background: rgba(0, 0, 0, 0.5);
   min-width: 100%;
 }
@@ -19,7 +19,7 @@
   gap: 30px;
 }
 
-.section_description_two {
+.section_description_two, .section_description_one {
   margin: 0px 30px 0px 30px;
 }
 
@@ -43,8 +43,18 @@
 }
 
 @media screen and (max-width: 768px) {
+  .section {
+    height: 60vh;
+  }
+
   .section h1 {
     margin: 0px 30px 0px 30px;
     font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .section {
+    height: 80vh;
   }
 }
