--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,9 +40,14 @@ body::-webkit-scrollbar-thumb {
   position: fixed;
   top: 0;
   left: 0;
-  /* width: 100%;
-  height: 50%; */
-  z-index: -1; /* Fica atrás do conteúdo */
+  overflow: hidden;
+  z-index: -1;
+}
+
+.background_image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 768px) {
