Adiciona seção \Sobre\ com estilos e ajusta cores globais

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,8 @@
 :root {
   --background: #ffffff;
   --green: #86bd3d;
+  --title-color: #3e581b;
+  --text-color: #2c2c2c;
   --whatsapp: #47c655;
   --whatsapp_hover: #24792e;
 }
