--- a/src/components/second_session/index.module.css
+++ b/src/components/second_session/index.module.css
@@ -1,6 +1,6 @@
 .second_section {
   z-index: 1;
-  height: 50vh;
+  padding-bottom: 20px;
   background-color: var(--green);
   width: 100%;
   display: flex;
@@ -120,6 +120,11 @@
 }
 
 @media (max-width: 700px) {
+  .second_section {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
   .second_section_container {
     width: 100%;
     height: 100%;
