--- a/src/components/section/index.module.css
+++ b/src/components/section/index.module.css
@@ -6,8 +6,9 @@
   justify-content: center;
   gap: 30px;
   height: 40vh;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.671);
   min-width: 100%;
+  padding: 45px 0px 45px 0px;
 }
 
 .section h1 {
@@ -71,6 +72,7 @@
 @media screen and (max-width: 768px) {
   .section {
     min-height: 500px;
+    padding: 20px 0px 20px 0px;
   }
 
   .section h1 {
