feat(footer): adiciona ícones de contato e ajusta formatação do footer

--- a/src/components/footer/index.module.css
+++ b/src/components/footer/index.module.css
@@ -18,6 +18,10 @@
   padding-right: 20vw;
 }
 
+.footer .contact h3 svg{
+  margin-right: 0.2em;
+}
+
 .footer .links {
   display: flex;
   flex-direction: column;
