--- a/src/components/header/index.module.css
+++ b/src/components/header/index.module.css
@@ -68,9 +68,13 @@
     gap: 10px
   }
 
+  .header h2 {
+    font-size: 16px;
+  }
+
   .header img {
-    width: 80px;
-    height: 40px;
+    width: 100px;
+    height: 55px;
   }
 
   .header section {
